--- a/app/views/orders/orderEdit.html
+++ b/app/views/orders/orderEdit.html
@@ -108,7 +108,7 @@
             {{buttonText}}
           </button>
           &nbsp;&nbsp;
-          <button type="submit" class="btn btn-primary" data-ng-click="deleteOrder()">
+          <button class="btn btn-danger" type="submit"  data-ng-click="deleteOrder()">
             Delete Order
           </button>
         </div>
