--- a/app/views/authors/authors.html
+++ b/app/views/authors/authors.html
@@ -1,67 +1,86 @@
+<div class="customers view indent">
 <div class="container" ng-controller="authorsController" >
   <header>
     <h3>
       <span class="glyphicon glyphicon-user"></span> Authors
     </h3>
   </header>
-  <div>
-    <ul class="nav navbar-nav">
-      <li data-ng-class="{active: !listDisplayModeEnabled}" class="toolbaritem">
-        <a data-ng-click="changeDisplayMode(DisplayModeEnum.Card)">
-          <span class="glyphicon glyphicon-th-large"></span> Card View
-        </a>
-      </li>
-      <li data-ng-class="{active: listDisplayModeEnabled}" class="toolbaritem">
-        <a data-ng-click="changeDisplayMode(DisplayModeEnum.List)">
-          <span class="glyphicon glyphicon-align-justify"></span> List View
-        </a>
-      </li>
-      <li class="toolbaritem">
-        <a data-ng-click="navigate('/authorEdit/0')">
-          <span class="glyphicon glyphicon-plus"></span> Add Author
-        </a>
-      </li>
-    </ul>
-  </div>
   <div class="row">
-    <form class="navbar-form navbar-right">
-      <div class="form-group">
-        <label class="navbarText col-sm-2">Filter:</label>
-        <div class="col-sm-10">
-          <input type="text"  class="text-warning" data-ng-model="searchText" data-ng-change="searchTextChanged();"  placeholder="Enter your search terms" />
-         <!-- <input type="text"
-                 data-ng-model="vm.searchText"
-                 data-ng-change="vm.searchTextChanged()"
-                 class="novalidate form-control" />-->
-        <!--  <button type="submit" class="btn btn-primary" data-ng-click="findAuthor()">Search</button>
-          <div>{{filteredAuthors}}</div>-->
-        </div>
-      </div>
-    </form>
-  </div>
-  <div >
+    <div class="col-md-10">
+      <div class="navbar">
+       <ul class="nav navbar-nav">
+         <li data-ng-class="{active: !listDisplayModeEnabled}" class="toolbaritem">
+           <a data-ng-click="changeDisplayMode(DisplayModeEnum.Card)">
+             <span class="glyphicon glyphicon-th-large"></span> Card View
+           </a>
+         </li>
+         <li data-ng-class="{active: listDisplayModeEnabled}" class="toolbaritem">
+           <a data-ng-click="changeDisplayMode(DisplayModeEnum.List)">
+             <span class="glyphicon glyphicon-align-justify"></span> List View
+           </a>
+         </li>
+         <li class="toolbaritem">
+           <a data-ng-click="navigate('/authorEdit/0')">
+             <span class="glyphicon glyphicon-plus"></span> Add Author
+           </a>
+         </li>
+       </ul>
+        <form class="navbar-form navbar-right">
+          <div class="form-group">
+            <label class="navbarText col-sm-2">Filter:</label>
+            <div class="col-sm-10">
+              <input type="text"  class="novalidate form-control" data-ng-model="searchText" data-ng-change="searchTextChanged();"  placeholder="Enter your search terms" />
+            </div>
+          </div>
+        </form>
 
-<!--    <ui>
+      </div>
+    </div>
+  </div>
+  <div class="container">
+    <div class="row cardContainer show-hide-animation" data-ng-hide="listDisplayModeEnabled">
+      <div class="col-sm-6 col-md-4 col-lg-3" ng-repeat="author in filteredAuthors | filter: paginate" >
+        <div class="card">
+          <button class="btn close cardClose" title="Delete Author" data-ng-click="deleteAuthor(author.CustomerID)"> &times;</button>
+          <div class="cardHeader">
+            <a class="white" ng-href="#/authorEdit/{{author.CustomerID}}" ng-model ="author.CustomerID" >{{author.ContactName}}</a>
+          </div>
+          <div class="cardBody">
+            <div class="clearfix">
+              <div class="pull-left cardBodyLeft">
+                <a ng-href="#/authorEdit/{{author.CustomerID}}"><span class="glyphicon glyphicon-user"></span></a>
+              </div>
+              <div class="pull-right cardBodyRight">
+                <div class="cardBodyContent">{{author.CompanyName}} {{author.ContactTitle}}</div>
+                <div>
+                  <a ng-href="#/orders" class="btn-link">{{OrderCount}}</a>
+                </div>
+              </div>
+          </div>
+       </div>
+
+
+       <!-- {{author.ContactName}}-  {{author.ContactTitle}}-  {{author.CompanyName}}  <a  ng-href="#/authorEdit/{{author.CustomerID}}" ng-model ="author.CustomerID" >Edit</a>
+        <a  ng-href="#/products" ng-model ="author.CustomerID" >Products</a>-->
+      </div>
+    </div>
+  </div>
+
+    <!--    <ui>
       <li class="col-sm-6 col-md-4 col-lg-3" ng-repeat="author in authors | nameProduct:searchText" data-ng-hide="listDisplayModeEnabled">
         {{author.ContactName}}-  {{author.ContactTitle}}-  {{author.CompanyName}}  <a  ng-href="#/authorEdit/{{author.CustomerID}}" ng-model ="author.CustomerID" >Edit</a>
         <a  ng-href="#/products" ng-model ="author.CustomerID" >Products</a>
       </li>
     </ui>-->
-
-    <div class="col-sm-6 col-md-4 col-lg-3" ng-repeat="author in filteredAuthors | filter: paginate" data-ng-hide="listDisplayModeEnabled">
-      {{author.ContactName}}-  {{author.ContactTitle}}-  {{author.CompanyName}}  <a  ng-href="#/authorEdit/{{author.CustomerID}}" ng-model ="author.CustomerID" >Edit</a>
-      <a  ng-href="#/products" ng-model ="author.CustomerID" >Products</a>
-    </div>
-
     <div  class="row gridContainer customersTable show-hide-animation"   data-ng-show="listDisplayModeEnabled">
       <div class="col-md-10">
         <div>
-          <table class="table table-striped table-condensed" backgrond="grey">
+          <table class="table table-striped table-condensed">
             <thead>
             <tr>
               <!--<th>&nbsp;</th>-->
-              <th> <a href="" ng-click="order('ContactName')"> Name</a></th>
-              <th><a href="" ng-click="order('CompanyName')"> Location</a></th>
+              <th> <a href="" ng-click="order('ContactName')" class="white"> Name</a></th>
+              <th><a href="" ng-click="order('CompanyName')" class="white"> Location</a></th>
               <th> Action</th>
               <!--<th>&nbsp;</th>-->
             </tr>
@@ -70,17 +89,37 @@
             <tr data-ng-repeat="author in filteredAuthors |orderBy :predicate:reverse | filter: paginate" class="repeat-animation">
               <td>{{author.ContactName}}</td>
               <td>{{author.CompanyName}}</td>
-              <td><a  ng-href="#/authorEdit/{{author.CustomerID}}" ng-model ="author.CustomerID" >Edit</a></td>
+              <td>
+                <a  ng-href="#/authorEdit/{{author.CustomerID}}" ng-model ="author.CustomerID" >Edit</a>
+                <button class="btn btn-danger" data-ng-click="deleteAuthor(author.CustomerID)"></button>
+              </td>
             </tr>
             </tbody>
           </table>
-          <pagination total-items="filteredCountAuthors" ng-model="currentPage"
-                      max-size="5" boundary-links="true"
-                      items-per-page="numPerPage" class="pagination-sm">
-          </pagination>
+
         </div>
       </div>
 
   </div>
+</div>
+  <div class="container">
+    <div class="row show-hide-animation" data-ng-show="filteredCountAuthors == 0">
+        <div class="col-span-12"> <h4> No authors found </h4> </div>
+    </div>
+  </div>
+  <div class="row show-hide-animation" data-ng-show="filteredCountAuthors > 0">
+    <div class="col-md-12">
+            <div total-items="filteredCountAuthors"
+                        ng-model="currentPage"
+                        max-size="5"
+                        boundary-links="true"
+                        items-per-page="numPerPage"
+                        class="pagination-sm"  data-pagination>
+                </div>
+              <h5> bla bla {{numPerPage}} hahhha {{filteredCountAuthors}}</h5>
+
+    </div>
+  </div>
+  <br /><br /><br />
 </div>
 </div>
