--- a/app/views/orders/orders.html
+++ b/app/views/orders/orders.html
@@ -40,7 +40,7 @@
               </div>
             </a>
             <ul class="dropdown-menu" role="menu" aria-labelledby="dLabel">
-              <calendar data-ng-model="startDate" selected="startDate" ></calendar>
+              <calendar data-ng-model="startDate" selected="formatDate(fromDate, '-')" ></calendar>
             </ul>
           </div>
         </li>
