--- a/app/partials/modalDialog.html
+++ b/app/partials/modalDialog.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-
-</body>
-</html>
+<div claas="modal-header">
+  <h3>{{modalOptions.headerText}}</h3>
+</div>
+<div class="modal-body">
+  <p>{{modalOptions.bodyText}}</p>
+</div>
+<div class="modal-footer">
+  <button type="button" class="btn" data-ng-click="modalOptions.close()">{{modalOptions.closeButtonText}}</button>
+  <button type="button" class="btn" data-ng-click="modalOptions.ok()">{{modalOptions.actionButtonText}}</button>
+</div>
